Feature/users (#5)
* leases db etc

* profile and register fix
